Add glslang stub and integrate Vulkan support in NCNN
- Created a new glslang_stub library to provide necessary functionality for NCNN.
- Updated Android.mk and CMakeLists.txt to include glslang_stub and NCNN libraries.
- Enhanced glslang_stub.cpp with minimal implementations of required classes and methods.
- Improved Vulkan initialization in native-lib.cpp with error handling and logging.
- Updated MainActivity.kt to include a Vulkan status checker UI component for better user feedback.

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -1,76 +1,73 @@
 cmake_minimum_required(VERSION 3.10.2)
 project("yolo_kotlin_ncnn")
 
+# Set C++ standard
 set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # Enable Vulkan support
 add_definitions(-DNCNN_VULKAN=1)
 
-# Set proper include directories
-include_directories(${CMAKE_SOURCE_DIR})
-include_directories(${CMAKE_SOURCE_DIR}/ncnn_include)
-include_directories(${CMAKE_SOURCE_DIR}/ncnn_include/ncnn)
-include_directories(${CMAKE_SOURCE_DIR}/ncnn_include/glslang)
-include_directories(${CMAKE_SOURCE_DIR}/ncnn_include/glslang/Include)
-include_directories(${CMAKE_SOURCE_DIR}/ncnn_include/glslang/SPIRV)
-
-# Find and enable OpenMP
-find_package(OpenMP)
+# Enable OpenMP
+find_package(OpenMP REQUIRED)
 if(OpenMP_CXX_FOUND)
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
-    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
 endif()
 
-# Compile the glslang stub with all symbols exported
+# Set include directories
+include_directories(
+    ${CMAKE_CURRENT_SOURCE_DIR}
+    ${CMAKE_CURRENT_SOURCE_DIR}/ncnn_include
+    ${CMAKE_CURRENT_SOURCE_DIR}/ncnn_include/ncnn
+    ${CMAKE_CURRENT_SOURCE_DIR}/ncnn_include/glslang
+)
+
+# Build the glslang stub library as STATIC
 add_library(glslang_stub STATIC
     glslang_stub.cpp
 )
 
-# Set visibility for the stub library
+# Set properties for glslang_stub (Visibility settings less critical for STATIC)
 set_target_properties(glslang_stub PROPERTIES
-    CXX_VISIBILITY_PRESET default
-    VISIBILITY_INLINES_HIDDEN OFF
+    POSITION_INDEPENDENT_CODE ON
 )
 
-# Create the shared library "native-lib" from native-lib.cpp
+# Find the Vulkan library
+find_library(vulkan-lib vulkan)
+
+# Find required Android libraries
+find_library(log-lib log)
+find_library(android-lib android)
+find_library(jnigraphics-lib jnigraphics)
+
+# Import NCNN library
+add_library(ncnn STATIC IMPORTED)
+set_target_properties(ncnn PROPERTIES IMPORTED_LOCATION
+    ${CMAKE_CURRENT_SOURCE_DIR}/libs/${ANDROID_ABI}/libncnn.a)
+
+# Build the main native library
 add_library(native-lib SHARED
     native-lib.cpp
 )
 
-# Define OpenMP library path - Android NDK r21+ includes libomp
-if(OpenMP_CXX_FOUND)
-    set(OPENMP_LIB OpenMP::OpenMP_CXX)
-else()
-    set(OPENMP_LIB ${CMAKE_SOURCE_DIR}/libs/${ANDROID_ABI}/libomp.so)
-    if(NOT EXISTS ${OPENMP_LIB})
-        message(FATAL_ERROR "OpenMP library not found. Please install NDK r21+ or provide libomp.so")
-    endif()
-endif()
-
-# Include NCNN library with proper ABI path
-add_library(ncnn_static STATIC IMPORTED)
-set_target_properties(ncnn_static PROPERTIES IMPORTED_LOCATION 
-    ${CMAKE_SOURCE_DIR}/libs/${ANDROID_ABI}/libncnn.a)
-
-# Include Vulkan library
-find_library(vulkan-lib vulkan)
-if(NOT vulkan-lib)
-    message(FATAL_ERROR "Vulkan library not found")
-endif()
-
-# Link with ncnn, glslang stub, and other needed libraries
+# Link against our libraries
+# Link static libraries directly. Order might matter.
 target_link_libraries(native-lib
-    glslang_stub  # Link our stub first so its symbols are used
-    ncnn_static
-    ${OPENMP_LIB}
+    # System/Shared libs first
     ${vulkan-lib}
-    jnigraphics
-    android
-    log
+    ${log-lib}
+    ${android-lib}
+    ${jnigraphics-lib}
+    OpenMP::OpenMP_CXX
+
+    # Static libraries - glslang_stub needs to satisfy ncnn's dependencies
+    glslang_stub
+    ncnn
 )
 
-# Use additional link flags to handle symbol resolution issues
-set_target_properties(native-lib PROPERTIES 
-    LINK_FLAGS "-Wl,--allow-shlib-undefined -Wl,--allow-multiple-definition")
+# Add specific link flags to handle symbol resolution
+# Keep --no-undefined for strictness
+set_target_properties(native-lib PROPERTIES
+    LINK_FLAGS "-Wl,--allow-multiple-definition -Wl,-z,nodelete -Wl,--no-undefined")
 
